<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@mipmap/im_wagon"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/channel_avatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="@id/avatarImageView"
        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
        app:layout_constraintLeft_toRightOf="@id/avatarImageView"
        app:layout_constraintBottom_toTopOf="@id/author"
        android:text="@string/name_public_group"/>

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
        app:layout_constraintLeft_toLeftOf="@id/author"
        android:text="@string/date_published"/>

    <ImageButton
        android:id="@+id/action_bar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatarImageView"
        app:layout_constraintBottom_toBottomOf="@id/avatarImageView"
        android:background="@android:color/transparent"
        android:contentDescription="@string/action_button_with_post" />
    
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatarImageView, author, published, action_bar"/>

    <TextView
        android:id="@+id/textFromPost"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:text="@string/text_from_post"
        />

    <ImageView
        android:id="@+id/imagePost"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        app:layout_constraintTop_toBottomOf="@id/textFromPost"
        android:src="@mipmap/im_wagon_foreground"
        android:contentDescription="@string/post_image" />

    <ImageButton
        android:id="@+id/like"
        android:padding="2dp"
        android:src="@drawable/like_negative"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@id/imagePost"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/it_is_like" />

    <TextView
        android:id="@+id/textLike"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        android:text="152"
        android:textSize="18sp"/>

    <ImageButton
        android:id="@+id/comment"
        android:src="@drawable/comment"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/imagePost"
        app:layout_constraintStart_toEndOf="@id/textLike"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/it_is_comments" />

    <TextView
        android:id="@+id/textComment"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/comment"
        app:layout_constraintTop_toTopOf="@id/comment"
        app:layout_constraintBottom_toBottomOf="@id/comment"
        android:text="132"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/views"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/eye"
        app:layout_constraintEnd_toStartOf="@id/textViews"
        app:layout_constraintRight_toLeftOf="@id/textViews"
        app:layout_constraintTop_toBottomOf="@id/imagePost"
        android:contentDescription="@string/these_are_views" />

    <TextView
        android:id="@+id/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/imagePost"
        app:layout_constraintTop_toTopOf="@id/views"
        app:layout_constraintBottom_toBottomOf="@id/views"
        android:text="1k"
        android:textSize="18sp"/>

    <ImageButton
        android:id="@+id/repost"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/imagePost"
        app:layout_constraintStart_toEndOf="@id/textComment"
        android:layout_marginStart="24dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/pointer"
        android:contentDescription="@string/it_is_repost" />

    <TextView
        android:id="@+id/textRepost"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/repost"
        app:layout_constraintTop_toTopOf="@id/repost"
        app:layout_constraintBottom_toBottomOf="@id/repost"
        android:text="7"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>